# github-api

./: .gitignore  Cargo.toml  README.md
scripts/: automate.ts
src/: client.rs  end_points.rs  implements.rs  lib.rs
