[package]
name = "github-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.73"

[dev-dependencies]
tokio = { version = "1.14.0", features = ["rt-multi-thread", "macros"] }
